# Skillbox_SearchEngine_cpp

./: CMakeLists.txt  README.md
config/: config.json  requests.json
include/: converterJSON.h  invertedIndex.h  searchEngine.h  searchServer.h
src/: CMakeLists.txt  Search_engine.cpp  converterJSON.cpp  invertedIndex.cpp  searchServer.cpp
tests/: CMakeLists.txt  gen_test.cpp  index_tests.cpp  server_tests.cpp
